--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ test:
   override:
     - mkdir -p $CIRCLE_TEST_REPORTS/golang
     - go test -race -v ./... | go-junit-report > $CIRCLE_TEST_REPORTS/golang/junit.xml
-    - go test -v -cover -race -coverprofile=$CIRCLE_ARTIFACTS/coverage.out ./...
+    - go test -v -cover -race -coverprofile=$CIRCLE_ARTIFACTS/coverage.out ./video
     - cd $CIRCLE_ARTIFACTS && sed -i '1d' *.out
     - |
       echo "mode: atomic" > $CIRCLE_ARTIFACTS/overall-coverage.result
