Update memory limits.

--- a/helm/upp-next-video-mapper/values.yaml
+++ b/helm/upp-next-video-mapper/values.yaml
@@ -9,6 +9,8 @@ image:
   repository: coco/upp-next-video-mapper
   pullPolicy: IfNotPresent
 resources:
+  requests:
+    memory: 90Mi
   limits:
     memory: 256Mi
 env:
