Upadeted circleci config and go version to 1.11

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/Financial-Times/go-logger"
+  version = "1.0.0"
