--- a/helm/upp-next-video-mapper/templates/deployment.yaml
+++ b/helm/upp-next-video-mapper/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
                 values:
                 - {{ .Values.service.name }}
             topologyKey: "kubernetes.io/hostname"
+      serviceAccountName: {{ .Values.service.serviceAccountName }}
       containers:
       - name: {{ .Values.service.name }}
         image: "{{ .Values.image.repository }}:{{ .Chart.Version }}"
@@ -50,6 +51,11 @@ spec:
           value: "{{ .Values.env.KAFKA_LAG_TOLERANCE }}"
         - name: LOG_LEVEL
           value: "{{ .Values.env.LOG_LEVEL }}"
+        - name: KAFKA_CLUSTER_ARN
+          valueFrom:
+            configMapKeyRef:
+              name: global-config
+              key: msk.kafka.cluster.arn
         ports:
         - containerPort: 8080
         livenessProbe:
